Refactoring / shortening of performance tests