@@ -125,9 +125,9 @@ public class SerialParallelLazyPerformanceTest
 
     private static final int SCALE_FACTOR = Integer.parseInt(System.getProperty("scaleFactor", "100"));
 
-    private static final int WARM_UP_COUNT = Integer.parseInt(System.getProperty("WarmupCount", "100"));
-    private static final int PARALLEL_RUN_COUNT = Integer.parseInt(System.getProperty("ParallelRunCount", "200"));
-    private static final int SERIAL_RUN_COUNT = Integer.parseInt(System.getProperty("SerialRunCount", "200"));
+    private static final int WARM_UP_COUNT = Integer.parseInt(System.getProperty("WarmupCount", "5"));
+    private static final int PARALLEL_RUN_COUNT = Integer.parseInt(System.getProperty("ParallelRunCount", "10"));
+    private static final int SERIAL_RUN_COUNT = Integer.parseInt(System.getProperty("SerialRunCount", "10"));
 
     private static final int SMALL_COUNT = 100 * SCALE_FACTOR;
     private static final int MEDIUM_COUNT = 1000 * SCALE_FACTOR;
@@ -324,7 +324,7 @@ public class SerialParallelLazyPerformanceTest
     private void measureAlgorithmForIntegerIterable(String algorithmName, Procedure<Function0<FastList<Integer>>> algorithm, boolean shuffle)
     {
         this.printMachineAndTestConfiguration(algorithmName);
-        for (int i = 0; i < 4; i++)
+        for (int i = 0; i < 1; i++)
         {
             this.getSizes().forEach(Procedures.cast(count -> this.getIntegerListGenerators(count, shuffle).forEach(algorithm)));
         }
@@ -350,7 +350,7 @@ public class SerialParallelLazyPerformanceTest
     private void measureAlgorithmForRandomStringIterable(String algorithmName, Procedure<Function0<UnifiedSet<String>>> algorithm)
     {
         this.printMachineAndTestConfiguration(algorithmName);
-        for (int i = 0; i < 4; i++)
+        for (int i = 0; i < 1; i++)
         {
             this.getSizes().forEach(Procedures.cast(count -> this.getRandomWordsGenerators(count).forEach(algorithm)));
         }
@@ -367,7 +367,7 @@ public class SerialParallelLazyPerformanceTest
         MutableList<Runnable> runnables = FastList.newList();
         runnables.add(() -> this.basicSerialForEachPerformance(collection, SERIAL_RUN_COUNT));
         int cores = Runtime.getRuntime().availableProcessors();
-        ExecutorService service = Executors.newFixedThreadPool(cores);
+        ExecutorService service = Executors.newVirtualThreadPerTaskExecutor();
         runnables.add(() -> {
             MutableMap<Integer, Boolean> map = new ConcurrentHashMap<>();
             this.basicParallelLazyForEachPerformance(collection, "Lambda", item -> map.put(item, Boolean.TRUE), PARALLEL_RUN_COUNT, cores, service);
@@ -406,7 +406,7 @@ public class SerialParallelLazyPerformanceTest
         MutableList<Runnable> runnables = FastList.newList();
         runnables.add(() -> this.basicSerialToListPerformance(collection, SERIAL_RUN_COUNT));
         int cores = Runtime.getRuntime().availableProcessors();
-        ExecutorService service = Executors.newFixedThreadPool(cores);
+        ExecutorService service = Executors.newVirtualThreadPerTaskExecutor();
         runnables.add(() -> this.basicParallelLazyToListPerformance(collection, PARALLEL_RUN_COUNT, cores, service));
         runnables.add(() -> this.basicJava8ParallelLazyToListPerformance(collection, PARALLEL_RUN_COUNT));
         List<Integer> arrayList = new ArrayList<>(collection);
@@ -428,7 +428,7 @@ public class SerialParallelLazyPerformanceTest
         MutableList<Runnable> runnables = FastList.newList();
         runnables.add(() -> this.basicSerialSelectPerformance(collection, PREDICATES_LAMBDA, SERIAL_RUN_COUNT));
         int cores = Runtime.getRuntime().availableProcessors();
-        ExecutorService service = Executors.newFixedThreadPool(cores);
+        ExecutorService service = Executors.newVirtualThreadPerTaskExecutor();
         runnables.add(() -> this.basicParallelLazySelectPerformance(collection, "Lambda", PREDICATES_LAMBDA, PARALLEL_RUN_COUNT, cores, service));
         runnables.add(() -> this.basicParallelLazySelectPerformance(collection, "Predicate", PREDICATES, PARALLEL_RUN_COUNT, cores, service));
         runnables.add(() -> this.basicParallelLazySelectPerformance(collection, "MethodRef", PREDICATES_METHOD_REF, PARALLEL_RUN_COUNT, cores, service));
@@ -454,7 +454,7 @@ public class SerialParallelLazyPerformanceTest
         MutableList<Runnable> runnables = FastList.newList();
         runnables.add(() -> this.basicSerialRejectPerformance(collection, PREDICATES_LAMBDA, SERIAL_RUN_COUNT));
         int cores = Runtime.getRuntime().availableProcessors();
-        ExecutorService service = Executors.newFixedThreadPool(cores);
+        ExecutorService service = Executors.newVirtualThreadPerTaskExecutor();
         runnables.add(() -> this.basicParallelLazyRejectPerformance(collection, "Lambda", PREDICATES_LAMBDA, PARALLEL_RUN_COUNT, cores, service));
         runnables.add(() -> this.basicParallelLazyRejectPerformance(collection, "Predicate", PREDICATES, PARALLEL_RUN_COUNT, cores, service));
         runnables.add(() -> this.basicParallelLazyRejectPerformance(collection, "MethodRef", PREDICATES_METHOD_REF, PARALLEL_RUN_COUNT, cores, service));
@@ -480,7 +480,7 @@ public class SerialParallelLazyPerformanceTest
         MutableList<Runnable> runnables = FastList.newList();
         runnables.add(() -> this.basicSerialAnySatisfyPerformance(collection, PREDICATES_LAMBDA.get(index), expectedResult, SERIAL_RUN_COUNT));
         int cores = Runtime.getRuntime().availableProcessors();
-        ExecutorService service = Executors.newFixedThreadPool(cores);
+        ExecutorService service = Executors.newVirtualThreadPerTaskExecutor();
         runnables.add(() -> this.basicParallelLazyAnySatisfyPerformance(collection, PREDICATES_LAMBDA.get(index), "Lambda", expectedResult, PARALLEL_RUN_COUNT, cores, service));
         runnables.add(() -> this.basicParallelLazyAnySatisfyPerformance(collection, PREDICATES.get(index), "Predicate", expectedResult, PARALLEL_RUN_COUNT, cores, service));
         runnables.add(() -> this.basicParallelLazyAnySatisfyPerformance(collection, PREDICATES_METHOD_REF.get(index), "MethodRef", expectedResult, PARALLEL_RUN_COUNT, cores, service));
@@ -506,7 +506,7 @@ public class SerialParallelLazyPerformanceTest
         MutableList<Runnable> runnables = FastList.newList();
         runnables.add(() -> this.basicSerialDetectPerformance(collection, PREDICATES_LAMBDA.get(index), expectedResult, SERIAL_RUN_COUNT));
         int cores = Runtime.getRuntime().availableProcessors();
-        ExecutorService service = Executors.newFixedThreadPool(cores);
+        ExecutorService service = Executors.newVirtualThreadPerTaskExecutor();
         runnables.add(() -> this.basicParallelLazyDetectPerformance(collection, PREDICATES_LAMBDA.get(index), "Lambda", expectedResult, PARALLEL_RUN_COUNT, cores, service));
         runnables.add(() -> this.basicParallelLazyDetectPerformance(collection, PREDICATES.get(index), "Predicate", expectedResult, PARALLEL_RUN_COUNT, cores, service));
         runnables.add(() -> this.basicParallelLazyDetectPerformance(collection, PREDICATES_METHOD_REF.get(index), "MethodRef", expectedResult, PARALLEL_RUN_COUNT, cores, service));
@@ -527,7 +527,7 @@ public class SerialParallelLazyPerformanceTest
         MutableList<Runnable> runnables = FastList.newList();
         runnables.add(() -> this.basicSerialCollectPerformance(collection, SERIAL_RUN_COUNT));
         int cores = Runtime.getRuntime().availableProcessors();
-        ExecutorService service = Executors.newFixedThreadPool(cores);
+        ExecutorService service = Executors.newVirtualThreadPerTaskExecutor();
         runnables.add(() -> this.basicParallelLazyCollectPerformance(collection, "Lambda", FUNCTIONS_LAMBDA, PARALLEL_RUN_COUNT, cores, service));
         runnables.add(() -> this.basicParallelLazyCollectPerformance(collection, "Function", FUNCTIONS, PARALLEL_RUN_COUNT, cores, service));
         runnables.add(() -> this.basicParallelLazyCollectPerformance(collection, "MethodRef", FUNCTIONS_METHOD_REF, PARALLEL_RUN_COUNT, cores, service));
@@ -553,7 +553,7 @@ public class SerialParallelLazyPerformanceTest
         MutableList<Runnable> runnables = FastList.newList();
         runnables.add(() -> this.basicSerialGroupByPerformance(words, SERIAL_RUN_COUNT));
         int cores = Runtime.getRuntime().availableProcessors();
-        ExecutorService service = Executors.newFixedThreadPool(cores);
+        ExecutorService service = Executors.newVirtualThreadPerTaskExecutor();
         runnables.add(() -> this.basicParallelLazyGroupByPerformance(words, "Lambda", ALPHAGRAM_LAMBDA, PARALLEL_RUN_COUNT, cores, service));
         runnables.add(() -> this.basicParallelLazyGroupByPerformance(words, "Function", ALPHAGRAM_FUNCTION, PARALLEL_RUN_COUNT, cores, service));
         runnables.add(() -> this.basicParallelLazyGroupByPerformance(words, "MethodRef", ALPHAGRAM_METHOD_REF, PARALLEL_RUN_COUNT, cores, service));
